# language-practice

./: .gitignore  CHANGELOG.md  LICENSE  README.md  language-practice  language_practice.py  russian_practice.py  russian_wiktionary.py  setup.cfg  setup.py
.githooks/: pre-commit
.github/workflows/: python.yml
data/: me.jbaublitz.LanguagePractice.desktop
language_practice/: cache.py  config.py  flashcard.py  gui.py  repetition.py  sqlite.py  terminal.py  toml.py
language_practice/gui/: __init__.py  study_window.py
language_practice/web/: __init__.py  fr.py  ru.py  shared.py  uk.py
lib/: cache.py  repetition.py  terminal.py  toml.py  web.py  webscrape.py
lib/web/: __init__.py  fr.py
