[metadata]
name = language-practice
author = John Baublitz
author_email = "john.m.baublitz@gmail.com"
url = https://github.com/jbaublitz/language-practice
description = Flashcard app with support for downloading inflection tables
license = BSD-3-Clause
version = 0.1.0

[options]
install_requires =
	aiohttp
	beautifulsoup4
	requests
	tabulate

packages =
	language_practice
	language_practice.web

scripts =
	language-practice
