[metadata]
name = language-practice
author = John Baublitz
author_email = "john.m.baublitz@gmail.com"
url = https://github.com/jbaublitz/language-practice
description = Flashcard app with support for downloading inflection tables
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-3-Clause
version = 0.1.5

[options]
install_requires =
	aiohttp
	beautifulsoup4
	requests
	tabulate

packages =
	language_practice
	language_practice.web

scripts =
	language-practice
